--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A learning project to use public api to show wether details using express and node js.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/PrashikBhimte/WetherApp/issues"
   },
-  "homepage": "https://github.com/PrashikBhimte/WetherApp#readme"
+  "homepage": "https://github.com/PrashikBhimte/WetherApp#readme",
+  "dependencies": {
+    "axios": "^1.6.1",
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
+  }
 }
